--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  height: 100vh;
+  width: 100vw;
+  font-size: 62.5%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  position: relative;
+  height: inherit;
+  width: inherit;
+  background-color: #232424;
+  background-color: #091a1a;
+  background-color: #080007;
+}
+
+.article {
+  width: 100%;
+  padding: 0 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1em;
+  height: 10vh;
+  margin: 5vh 0;
+}
+
+.material-symbols-outlined {
+  color: hsl(327, 100%, 50%);
+  font-size: 2em;
+}
+
+@media (max-width: 798px) {
+  html {
+    font-size: 55.5%;
+  }
+  .article {
+    height: 15vh;
+    padding: 0 2.5%;
+  }
 }
