--- a/src/components/Selection/Selection.module.css
+++ b/src/components/Selection/Selection.module.css
@@ -1,7 +1,7 @@
 .section {
   width: 100%;
   height: 10vh;
-  padding: 0 10%;
+  padding: 0 11.5%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   gap: 2em;
   height: 10vh;
 }
@@ -34,12 +35,36 @@
 .p:hover {
   color: rgb(239, 234, 243);
 }
+.mobile {
+  display: none;
+}
+/* .mobile:hover {
+  color: rgb(239, 234, 243);
+} */
 
 @media (max-width: 798px) {
   .h2 {
     font-size: 2em;
   }
   .filterBox {
-    gap: 1em;
+    gap: 3em;
+  }
+  .p {
+    display: none;
+  }
+
+  .mobile {
+    display: unset;
+    color: rgb(220, 197, 236);
+    font-size: 1.4em;
+    letter-spacing: 0.4px;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .mobile:hover {
+    color: rgb(239, 234, 243);
+  }
+  .section {
+    padding: 0 15.5%;
   }
 }
